--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapplication">
+    package="com.ubskii.progressbars">
 
     <application
-        android:label="Demo App"
+        android:label="Progress Bars"
+        android:icon="@drawable/progress_icon"
         android:theme="@style/AppTheme">
 
         <activity android:name=".MainActivity">
