--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,4 +20,8 @@ android {
 dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta5'
     implementation 'androidx.appcompat:appcompat:1.1.0'
+
+    def room_version = "2.2.5"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
