--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion '28.0.3'
     defaultConfig {
-        applicationId "com.ubskii.progressbars"
+        applicationId "space.missingtheground.progressbars"
         minSdkVersion 20
         targetSdkVersion 29
         versionCode 1
@@ -36,7 +36,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.0.0'
 
     // Room components
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
